<resources>
    <string name="app_name">CodesPorte</string>
    <string name="titre_listgare">Liste des gares</string>
    <string name="titre_listcode">Liste des codes de la gare</string>
    <string name="search_gare">Rechercher une gare...</string>
    <string name="search_code">Rechercher un code...</string>
    <string name="titre_addgare">Ajouter une gare</string>
    <string name="titre_addcode">Ajouter un code</string>
    <string name="itemPorte">Description de la porte</string>
    <string name="action_no">Non</string>
    <string name="action_yes">Oui</string>
    <string name="btn_annuler">Annuler</string>
    <string name="add_gare">Ajouter la gare</string>
    <string name="add_porte">Ajouter une porte</string>
    <string name="nom_de_la_gare">Nom de la gare</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="annulerRetour">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="code">Code</string>
    <string name="description_de_la_porte">Nom de la porte</string>
    <string name="gare_nom">Nom Gare</string>
    <string name="retour_la_liste_des_gares">Retour à la liste des gares</string>
    <string name="retour_aux_gares">Retour aux gares</string>
    <string name="ajouter_une_porte">Ajouter une porte</string>
    <string name="no_result">Aucun résultat</string>
    <string name="no_porte">Aucune porte enregistrée pour cette gare, cliquez sur le + pour ajouter une porte.</string>
</resources>