<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeAccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/gare_nom"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextPorte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_de_la_porte"
            android:autofillHints="name"
            android:inputType="textAutoCorrect"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:autofillHints="password"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <!-- Ici, ajoutez votre MapView pour Google Maps -->
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/modifsave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:icon="@drawable/ic_edit"
        android:text="@string/modifier"
        app:backgroundTint="@color/bgPrimary"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/modifsaveannuler_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/annulerRetour"
        app:backgroundTint="@color/redForCancelButton"
        app:icon="@drawable/ic_add"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
