<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titreListCode"
        android:text="@string/titre_listcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bgPrimary"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SearchView
        android:id="@+id/search_code"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/titreListCode"
        android:queryHint="@string/search_code" />

    <TextView
        android:id="@+id/tvNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="#757575" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_code"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/retour_la_liste_des_gares"
        android:text="@string/retour_aux_gares"
        app:backgroundTint="@color/bgPrimary"
        app:icon="@drawable/ic_back" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_codeporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/bgPrimary"
        app:tint="@android:color/white"
        app:fabSize="normal"
        android:contentDescription="@string/ajouter_une_porte"
        tools:ignore="RelativeOverlap" />
</RelativeLayout >
