<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapquest="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titreListGare"
        android:text="@string/titre_listgare"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bgPrimary"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <SearchView
        android:id="@+id/search_gare"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/titreListGare"
        android:queryHint="@string/search_gare" />

    <TextView
        android:id="@+id/tvNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="#757575" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_gare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_gare"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_gare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/bgPrimary"
        app:tint="@android:color/white"
        android:contentDescription="@string/titre_addgare"
        app:fabSize="normal"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout >
